--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,7 @@
         tools:layout="@layout/fragment_contact_profile" >
         <argument
             android:name="currentUserProfile"
-            app:argType="com.example.android_level_3.User" />
+            app:argType="com.example.android_level_3.model.Contact" />
     </fragment>
     <dialog
         android:id="@+id/customDialog"
