--- a/app/src/main/res/layout/element_contact_view.xml
+++ b/app/src/main/res/layout/element_contact_view.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="6dp"
     android:layout_marginHorizontal="12dp"
+    android:layout_marginVertical="6dp"
     android:background="@drawable/element_view_style">
 
+    <androidx.appcompat.widget.AppCompatCheckBox
+        android:id="@+id/checkboxForDelete"
+        android:theme="@style/Theme.AppCompat"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:button="@drawable/checkbox_selector"
+        android:visibility="gone"
+        android:checked="false"
+        android:clickable="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgContactAvatar"
         android:layout_width="58dp"
         android:layout_height="58dp"
+        android:layout_marginVertical="8dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/checkboxForDelete"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/default_avatar" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -39,20 +51,21 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="6dp"
         android:lines="1"
-        tools:text="Contact Name"
         android:textColor="@color/purple_color"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imgContactAvatar"
-        app:layout_constraintTop_toTopOf="@+id/imgContactAvatar" />
+        app:layout_constraintTop_toTopOf="@+id/imgContactAvatar"
+        tools:text="Contact Name" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvContactCareer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Career"
-        android:textColor="@color/gray_color"
         android:lines="1"
+        android:textColor="@color/gray_color"
         app:layout_constraintStart_toStartOf="@+id/tvContactName"
-        app:layout_constraintTop_toBottomOf="@+id/tvContactName" />
+        app:layout_constraintTop_toBottomOf="@+id/tvContactName"
+        tools:text="Career" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
