--- a/app/src/main/res/layout/fragment_contacts_list.xml
+++ b/app/src/main/res/layout/fragment_contacts_list.xml
@@ -46,9 +46,22 @@
         android:id="@+id/rvContacts"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/imgDeleteManyContacts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newContactContainer" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imgDeleteManyContacts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:paddingTop="36dp"
+        android:layout_marginBottom="36dp"
+        android:src="@drawable/basket_icon"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
