--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/fragmentSettings">
+    app:startDestination="@id/viewPagerFragment">
     <fragment
         android:id="@+id/fragmentSettings"
         android:name="com.example.android_level_3.FragmentSettings"
@@ -17,14 +17,7 @@
         android:id="@+id/fragmentContactsList"
         android:name="com.example.android_level_3.FragmentContactsList"
         android:label="fragment_contacts_list"
-        tools:layout="@layout/fragment_contacts_list" >
-        <action
-            android:id="@+id/action_fragmentContactsList_to_fragmentContactProfile"
-            app:destination="@id/fragmentContactProfile" />
-        <action
-            android:id="@+id/action_fragmentContactsList_to_customDialog"
-            app:destination="@id/customDialog" />
-    </fragment>
+        tools:layout="@layout/fragment_contacts_list" />
     <fragment
         android:id="@+id/fragmentContactProfile"
         android:name="com.example.android_level_3.FragmentContactProfile"
@@ -39,4 +32,16 @@
         android:name="com.example.android_level_3.CustomDialog"
         android:label="activity_add_contact"
         tools:layout="@layout/activity_add_contact" />
+    <fragment
+        android:id="@+id/viewPagerFragment"
+        android:name="com.example.android_level_3.ViewPagerFragment"
+        android:label="fragment_view_pager"
+        tools:layout="@layout/fragment_view_pager" >
+        <action
+            android:id="@+id/action_viewPagerFragment_to_fragmentContactProfile"
+            app:destination="@id/fragmentContactProfile" />
+        <action
+            android:id="@+id/action_viewPagerFragment_to_customDialog"
+            app:destination="@id/customDialog" />
+    </fragment>
 </navigation>
