--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,4 +23,10 @@
         <item name="android:backgroundTint">@color/gray_color</item>
     </style>
 
+    <style name="checkBoxMultiSelectStyle" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/transparent</item>
+        <item name="colorControlActivated">@color/transparent</item>
+        <item name="controlBackground">@color/transparent</item>
+    </style>
+
 </resources>
