--- a/app/src/main/res/layout/fragment_contacts_list.xml
+++ b/app/src/main/res/layout/fragment_contacts_list.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbarContactList"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/rvContacts">
+        app:layout_constraintBottom_toTopOf="@id/recyclerViewContacts">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvAddNewContact"
@@ -43,7 +43,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvContacts"
+        android:id="@+id/recyclerViewContacts"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/imgDeleteManyContacts"
