Level_4/TASK_2: added function show/hide TabLayout, created new element_view (gray_color)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="purple_color">#232235</color>
     <color name="orange_color">#fb5e06</color>
     <color name="gray_color">#b2b2b3</color>
-    <color name="white_color">#FFFFFFFF</color>
+    <color name="white_color">#FFFFFF</color>
+    <color name="element_view_gray_background_color">#E7E7E7</color>
 
     <color name="profile_bot_side">#FFFFFF</color>
     <color name="profile_top_side">#232235</color>
